Fixed an stretched out image by adding a second media quary before the last one.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,44 @@ h1 {
 
 #gameContainer {
     width: 100%;
+    height: 500px;
+}
+    
+.column{
+    border:4px solid blue;
+    width:90px;
+    background-color: blue;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 1;
+    position: relative;
+}
+    
+.slot{
+    background-color: white;
+    width:100%;
+    z-index: 2;
+    height:65px;
+    border-radius: 50%;
+    position: unset;
+}
+    
+#playerTwo {
+    font-size: 45px;
+}
+    
+#playerOne {
+    font-size: 45px;
+}
+
+}
+
+@media screen and (max-width:450px) {
+
+#gameContainer {
+    width: 100%;
     height: 400px;
 }
 
@@ -120,7 +158,7 @@ h1 {
     z-index: 1;
     position: relative;
 }
-
+    
 .slot{
     background-color: white;
     width:100%;
@@ -128,14 +166,6 @@ h1 {
     height:46px;
     border-radius: 50%;
     position: unset;
-}
-
-#playerTwo {
-    font-size: 45px;
-}
-
-#playerOne {
-    font-size: 45px;
 }
 
 }
